<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
		    android:id="@+id/ringing"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="20sp"
		    android:text="@string/ringing" />
    <ImageView 
        	android:id="@+id/image_Alarm"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:src="@drawable/alarm_ringing"
        	android:contentDescription="@string/description"/>
        	"
    <Button
        	android:id="@+id/button_cancel"
        	android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
        	android:textSize="15sp"
        	android:text="@string/buttoncancel"
        	android:onClick="ringCancel" />

</LinearLayout>